[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/EditorToolbar.gd" id="1"]

[node name="EditorToolbar" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Tools" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BtnSelect" type="Button" parent="HBoxContainer/Tools"]
layout_mode = 2
text = "Select"

[node name="BtnPlace" type="Button" parent="HBoxContainer/Tools"]
layout_mode = 2
text = "Place Node"

[node name="BtnRoute" type="Button" parent="HBoxContainer/Tools"]
layout_mode = 2
text = "Route Qi"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="RouteOptions" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/RouteOptions"]
layout_mode = 2
text = "Width:"

[node name="WidthOption" type="OptionButton" parent="HBoxContainer/RouteOptions"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Small (1)"
popup/item_0/id = 0
popup/item_1/text = "Medium (4)"
popup/item_1/id = 1
popup/item_2/text = "Large (12)"
popup/item_2/id = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="SimControls" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BtnPlay" type="Button" parent="HBoxContainer/SimControls"]
layout_mode = 2
text = "Run Simulation"

[node name="BtnStop" type="Button" parent="HBoxContainer/SimControls"]
layout_mode = 2
text = "Stop"

[connection signal="pressed" from="HBoxContainer/Tools/BtnSelect" to="." method="_on_select_pressed"]
[connection signal="pressed" from="HBoxContainer/Tools/BtnPlace" to="." method="_on_place_pressed"]
[connection signal="pressed" from="HBoxContainer/Tools/BtnRoute" to="." method="_on_route_pressed"]
[connection signal="item_selected" from="HBoxContainer/RouteOptions/WidthOption" to="." method="_on_width_option_item_selected"]
[connection signal="pressed" from="HBoxContainer/SimControls/BtnPlay" to="." method="_on_play_pressed"]
[connection signal="pressed" from="HBoxContainer/SimControls/BtnStop" to="." method="_on_stop_pressed"]
